--- a/message.html
+++ b/message.html
@@ -16,6 +16,27 @@
 	<script src="js/swiper-4.2.0.min.js"></script>
 </head>
 <body>
+
+
+
+
+
+	<div class="header">
+		<div class="center">
+			<a href="" class="logo">
+				<img src="images/logo.png" alt="" data-rjs="3">
+			</a>
+			<a href="javascript:void(0);" class="menu">
+				<img src="images/menu.png" alt="" data-rjs="3">
+			</a>
+		</div>
+	</div>
+
+
+
+
+
+
 	<div class="menu_box">
 		<div class="close"><i class="fa fa-plus" aria-hidden="true"></i></div>
 		<div class="title">主要页面</div>
@@ -53,16 +74,14 @@
 
 
 
-	<div class="header">
-		<div class="center">
-			<a href="" class="logo">
-				<img src="images/logo.png" alt="" data-rjs="3">
-			</a>
-			<a href="javascript:void(0);" class="menu">
-				<img src="images/menu.png" alt="" data-rjs="3">
-			</a>
-		</div>
-	</div>
+
+
+
+
+
+
+
+
 
 	<div class="banner">
 		<div class="swiper-wrapper">
@@ -81,3 +100,82 @@
 			}
 		})
 	</script>
+
+
+
+
+
+
+
+
+	<div class="card ny_message">
+		<div class="center">
+			<div class="title_c">客户留言</div>
+			<div class="rl"></div>
+			<div class="title_e">MESSAGE</div>
+			<div class="message_box">
+				<form action="">
+					<input type="text" placeholder="姓名 Name：">
+					<input type="number" placeholder="电话 Tel：">
+					<input type="text" placeholder="公司 Company：">
+					<input type="email" placeholder="邮箱 Mailbox：">
+					<textarea name="" id="" cols="30" rows="10" placeholder="内容 Matter："></textarea>
+					<input type="submit" value="提交" class="submit">
+				</form>
+			</div>
+		</div>
+	</div>
+	<div class="space"></div>
+
+
+
+
+	<div class="behind_footer"></div>
+
+	<div class="footer">
+		<a href="javascript:void(0);" class="on">
+			<span class="icon">
+				<img src="images/tab_icon/icon_index.png" alt="" data-rjs="3">
+				<img style="display: none;" src="images/tab_icon/icon_index_on.png" alt="" data-rjs="3">
+			</span>
+			<span class="text">网站首页</span>
+		</a>
+		<a href="javascript:void(0);">
+			<span class="icon">
+				<img src="images/tab_icon/icon_message.png" alt="" data-rjs="3">
+				<img style="display: none;" src="images/tab_icon/icon_message_on.png" alt="" data-rjs="3">
+			</span>
+			<span class="text">客户留言</span>
+		</a>
+		<a href="javascript:void(0);">
+			<span class="icon">
+				<img src="images/tab_icon/icon_service.png" alt="" data-rjs="3">
+				<img style="display: none;" src="images/tab_icon/icon_service_on.png" alt="" data-rjs="3">
+			</span>
+			<span class="text">在线客服</span>
+		</a>
+		<a href="javascript:void(0);">
+			<span class="icon">
+				<img src="images/tab_icon/icon_contact.png" alt="" data-rjs="3">
+				<img style="display: none;" src="images/tab_icon/icon_contact_on.png" alt="" data-rjs="3">
+			</span>
+			<span class="text">联系我们</span>
+		</a>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<script src="js/retina.min.js"></script>
+	<script src="js/main.js"></script>
+</body>
+</html>
