--- a/newsList.html
+++ b/newsList.html
@@ -16,6 +16,27 @@
 	<script src="js/swiper-4.2.0.min.js"></script>
 </head>
 <body>
+
+
+
+
+
+	<div class="header">
+		<div class="center">
+			<a href="" class="logo">
+				<img src="images/logo.png" alt="" data-rjs="3">
+			</a>
+			<a href="javascript:void(0);" class="menu">
+				<img src="images/menu.png" alt="" data-rjs="3">
+			</a>
+		</div>
+	</div>
+
+
+
+
+
+
 	<div class="menu_box">
 		<div class="close"><i class="fa fa-plus" aria-hidden="true"></i></div>
 		<div class="title">主要页面</div>
@@ -53,16 +74,14 @@
 
 
 
-	<div class="header">
-		<div class="center">
-			<a href="" class="logo">
-				<img src="images/logo.png" alt="" data-rjs="3">
-			</a>
-			<a href="javascript:void(0);" class="menu">
-				<img src="images/menu.png" alt="" data-rjs="3">
-			</a>
-		</div>
-	</div>
+
+
+
+
+
+
+
+
 
 	<div class="banner">
 		<div class="swiper-wrapper">
@@ -82,104 +101,104 @@
 		})
 	</script>
 
-
-
-
-
-
-
-
-
-
-
-	<div class="card ny_about">
+	<div class="card">
 		<div class="center">
-			<div class="title_c">关于我们</div>
-			<div class="rl"></div>
-			<div class="title_e">ABOUT US</div>
-			<div class="about_main">&emsp;&emsp;江西省金盛高科技发展有限责任公司是集科研、生产、销售、服务于一体的股份制企业公司产品为:"金盛牌"968系列混凝土外加剂、 酯(生产聚羧酸盐的大单体)。公司是:江西省有机功能分子重点实验室本科实习基地,江西省材料表面工程重点实验室本科实习基地。<br><br>&emsp;&emsp;公司拥有毕业于清华大学化学系的理学博士、毕业于中国科学院的工学博士...等高学位、高职称人员组成的科研队伍。并有美国洛杉机加利福尼亚大学高级研究科学家黄海根博士、美国阿拿巴马大学高级研究科学家周德旺博士为公司的技术顾问。<br><br>&emsp;&emsp;公司生产的聚羧酸盐高性能减水剂经清华大学高分子化学专家洪啸吟教授,北京大学高分子材料专家黄兰教授,南昌大学建筑材料专家胡明玉教授等专家的评审鉴定,该产品具有国际先进水平 。如今,公司生产的968系列产品多数以聚羧酸盐为载体,产质量稳定,性能优良,已广泛应用于多重点工程程,并在武汉-广州高速铁路客运专工程上评为速铁路客运专线合格供应商。
+			<ul class="product_tab_group">
+				<li class="on"><a href="">公司新闻</a></li>
+				<li><a href="">行业新闻</a></li>
+			</ul>
+			<ul class="news_list">
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/news1.jpg" alt="">
+						<span class="title">聚焦混凝土硬化剂地坪 金铸水泥硬化剂树立行业标杆</span>
+						<span class="date">2018-04-23</span>
+					</a>
+				</li>
+			</ul>
+			<div class="product_pagi">
+				<a href="" class="prev_page">上一页</a>
+				<a href="" class="next_page">下一页</a>
+				<span>1/2</span>
 			</div>
-			<img src="images/about.jpg" alt="" class="about_img">
 		</div>
 	</div>
-	<div class="space"></div>
 
 
 
 
 
-	<div class="card ny_honor">
-		<div class="center">
-			<div class="title_c">荣誉资质</div>
-			<div class="rl"></div>
-			<div class="title_e">HONOR</div>
-			<ul class="honor_group">
-				<li>
-					<a href="">
-						<span class="img_box">
-							<img src="images/honor1.jpg" alt="">
-						</span>
-						<span class="title">荣誉资质</span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<span class="img_box">
-							<img src="images/honor2.jpg" alt="">
-						</span>
-						<span class="title">荣誉资质</span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<span class="img_box">
-							<img src="images/honor1.jpg" alt="">
-						</span>
-						<span class="title">荣誉资质</span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<span class="img_box">
-							<img src="images/honor2.jpg" alt="">
-						</span>
-						<span class="title">荣誉资质</span>
-					</a>
-				</li>
-			</ul>
-			<a href="" class="honor_more" style="background-image: url(images/honor_more.png);" data-rjs="3">点击加载更多</a>
-		</div>
-	</div>
-	<div class="space"></div>
 
 
 
 
-	<div class="card ny_result">
-		<div class="center">
-			<div class="title_c">技术成果</div>
-			<div class="rl"></div>
-			<div class="title_e">RESULT</div>
-			<ul class="result_group">
-				<li>
-					<a href="">
-						<img src="images/result1.jpg" alt="">
-						<span class="title">技术成果名称一</span>
-						<span class="summary">技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介。</span>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="images/result1.jpg" alt="">
-						<span class="title">技术成果名称一</span>
-						<span class="summary">技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介技术成果简介。</span>
-					</a>
-				</li>
-			</ul>
-			<a href="" class="honor_more" style="background-image: url(images/honor_more.png);" data-rjs="3">点击加载更多</a>
-		</div>
-	</div>
-	<div class="space"></div>
+
+
+
+
 
 
 
@@ -220,8 +239,6 @@
 			<span class="text">联系我们</span>
 		</a>
 	</div>
-
-
 
 
 
