--- a/newsDetail.html
+++ b/newsDetail.html
@@ -115,7 +115,11 @@
 			<div class="detail_date">时间：2018-04-23</div>
 			<div class="detail_main">
 				<img src="images/product1.jpg" alt="" style="margin: 0 auto;">
-				<p>一．主要性能特点<br>掺加水泥（胶凝材料）重量1-2%968PW型的混凝土，其主要性能特点：<br>1.减水率≧14%<br>2.可明显改善混凝土的和易性、保水性、可泵性；<br>3.具有较好的缓凝性能，可缓凝1-6小时，还可根据用户具体需求作出适当调整；<br>4.可使混凝土初始坍落度提高10cm以上，坍落度经时损失小；<br>5.早强增强效果明显。<br>6.本产品无毒、不燃，对钢筋无锈蚀作用。<br>二、适用范围<br>适用于高温条件下施工的标号C35以上的高强泵送混凝土、商品混凝土、大体积混凝土、自密实混凝土。<br>三．使用方法<br>1.可直接掺加入拌好的干料中，与膨胀剂搭配使用时应延长混凝土搅拌时间30秒。<br>2.使用前按设计及施工要求进行级配确定最佳掺量。<br>3.砼养护按标准养护。<br>四．包装和储存<br>1.本产品为无色透明或淡黄色液体，塑料桶包装，每桶200kg+0.5kg、1000kg+3.0kg.。可根据用户需求提供包装或槽罐车运输。<br>2.在储存、运输时防止渗漏及水分蒸干，须密封遮阴存放，定期清洗储存罐。<br>3.本产品保质期为12个月。库存超期或污染变质后应经实验确认合格后方可继续使用。</p>
+				<p>一．主要性能特点<br>掺加水泥（胶凝材料）重量1-2%968PW型的混凝土，其主要性能特点：<br>1.减水率≧14%<br>2.可明显改善混凝土的和易性、保水性、可泵性；<br>3.具有较好的缓凝
+<p style="font-size: 10px">好的缓凝</p>
+<p style="font-size: 10px"><span style="font-size: 10px">好的缓凝</span></p>
+<span style="font-size: 10px">好的缓凝</span>
+					性能，可缓凝1-6小时，还可根据用户具体需求作出适当调整；<br>4.可使混凝土初始坍落度提高10cm以上，坍落度经时损失小；<br>5.早强增强效果明显。<br>6.本产品无毒、不燃，对钢筋无锈蚀作用。<br>二、适用范围<br>适用于高温条件下施工的标号C35以上的高强泵送混凝土、商品混凝土、大体积混凝土、自密实混凝土。<br>三．使用方法<br>1.可直接掺加入拌好的干料中，与膨胀剂搭配使用时应延长混凝土搅拌时间30秒。<br>2.使用前按设计及施工要求进行级配确定最佳掺量。<br>3.砼养护按标准养护。<br>四．包装和储存<br>1.本产品为无色透明或淡黄色液体，塑料桶包装，每桶200kg+0.5kg、1000kg+3.0kg.。可根据用户需求提供包装或槽罐车运输。<br>2.在储存、运输时防止渗漏及水分蒸干，须密封遮阴存放，定期清洗储存罐。<br>3.本产品保质期为12个月。库存超期或污染变质后应经实验确认合格后方可继续使用。</p>
 			</div>
 		</div>
 	</div>
