--- a/_header.html
+++ b/_header.html
@@ -24,24 +24,49 @@
 				<a href="" class="fir_link"><i class="fa fa-home" aria-hidden="true"></i>首页</a>
 			</li>
 			<li class="fir_item">
-				<a href="" class="fir_link"><i class="fa fa-star" aria-hidden="true"></i>这里可以放一些</a>
+				<a href="" class="fir_link"><i class="fa fa-star" aria-hidden="true"></i>关于金盛</a>
 				<ul class="sec_menu">
 					<li class="sec_item">
-						<a href="" class="sec_link">这里也可以放</a>
+						<a href="" class="sec_link">公司简介</a>
 					</li>
 					<li class="sec_item">
-						<a href="" class="sec_link">二级导航啊</a>
+						<a href="" class="sec_link">荣誉资质</a>
+					</li>
+					<li class="sec_item">
+						<a href="" class="sec_link">技术成果</a>
 					</li>
 				</ul>
 			</li>
 			<li class="fir_item">
-				<a href="" class="fir_link"><i class="fa fa-file" aria-hidden="true"></i>一级导航</a>
+				<a href="" class="fir_link"><i class="fa fa-file" aria-hidden="true"></i>产品中心</a>
+				<ul class="sec_menu">
+					<li class="sec_item">
+						<a href="" class="sec_link">减水剂</a>
+					</li>
+					<li class="sec_item">
+						<a href="" class="sec_link">防水剂</a>
+					</li>
+					<li class="sec_item">
+						<a href="" class="sec_link">968ZX增效剂</a>
+					</li>
+				</ul>
 			</li>
 			<li class="fir_item">
-				<a href="" class="fir_link"><i class="fa fa-bell" aria-hidden="true"></i>icon是fontAwesome字体图标</a>
+				<a href="" class="fir_link"><i class="fa fa-bell" aria-hidden="true"></i>新闻资讯</a>
+				<ul class="sec_menu">
+					<li class="sec_item">
+						<a href="" class="sec_link">公司新闻</a>
+					</li>
+					<li class="sec_item">
+						<a href="" class="sec_link">行业动态</a>
+					</li>
+				</ul>
 			</li>
 			<li class="fir_item">
-				<a href="" class="fir_link"><i class="fa fa-tag" aria-hidden="true"></i>可以去官网上找</a>
+				<a href="" class="fir_link"><i class="fa fa-tag" aria-hidden="true"></i>客户留言</a>
+			</li>
+			<li class="fir_item">
+				<a href="" class="fir_link"><i class="fa fa-file" aria-hidden="true"></i>联系我们</a>
 			</li>
 		</ul>
 <!-- 		<div class="title">关注公众号</div>
